syntax = "proto3";

option java_multiple_files = true;
option java_package = "pawg.grpc.service.person";
option java_outer_classname = "PersonServiceProto";

package person;

service Person {
  rpc GetPerson (PersonRequest) returns (PersonResponse) {}
  rpc UpsertPerson (PersonRequest) returns (PersonResponse) {}
  rpc DeletePerson (PersonRequest) returns (PersonResponse) {}
}

// The request message containing the user's name.
message PersonRequest {
  int64 id = 1;
  string name = 2;
  string last_name = 3;
}

// The response message containing the person.
message PersonResponse {
  int64 id = 1;
  string name = 2;
  string last_name = 3;
  string status = 4;
}